--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,9 @@ Package: shinyMetroUi
 Type: Package
 Title: 'shiny' API for the 'Metro 4' Library
 Version: 0.1.0
-Author: David Granjon
+Authors@R: c(
+  person("David", "Granjon", email = "dgranjon@ymail.com", role = c("aut", "cre")),
+  person("Sergey", "Pimenov", role = c("ctb", "cph"), comment = "Metro UI CSS"))
 Maintainer: David Granjon <dgranjon@ymail.com>
 Description: Create windows like shiny apps.
     Customize your web applications.
