--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,7 @@ Description: Create windows like shiny apps.
 Imports: shiny
 License: GPL-2
 Encoding: UTF-8
+URL: https://github.com/RinteRface/shinyMetroUi, https://rinterface.github.io/shinyMetroUi/
+BugReports: https://github.com/RinteRface/shinyMetroUi/issues
 LazyData: true
 RoxygenNote: 6.0.1
