--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Title: 'shiny' API for the 'Metro 4' Library
 Version: 0.1.0
 Authors@R: c(
   person("David", "Granjon", email = "dgranjon@ymail.com", role = c("aut", "cre")),
+  person(family = "RinteRface", role = "cph"),
   person("Sergey", "Pimenov", role = c("ctb", "cph"), comment = "Metro UI CSS"))
 Maintainer: David Granjon <dgranjon@ymail.com>
 Description: Create 'Windows' like shiny apps.
@@ -14,4 +15,4 @@ Encoding: UTF-8
 URL: https://github.com/RinteRface/shinyMetroUi, https://rinterface.github.io/shinyMetroUi/
 BugReports: https://github.com/RinteRface/shinyMetroUi/issues
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
