restart the repo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,15 @@
 
 export(charmsToggle)
 export(metroBadge)
+export(metroCell)
 export(metroCharms)
-export(metroCol)
 export(metroContainer)
+export(metroGrid)
 export(metroPage)
 export(metroPanel)
+export(metroRow)
+export(metroTab)
+export(metroTabs)
 export(metroTile)
 export(metroTilesGrid)
 export(metroWindow)
