update deps, add metroSplitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(metroGrid)
 export(metroPage)
 export(metroPanel)
 export(metroRow)
+export(metroSplitter)
 export(metroTab)
 export(metroTabs)
 export(metroTile)
