add metroCheck (without binding)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(charmsToggle)
 export(metroBadge)
 export(metroCell)
 export(metroCharms)
+export(metroCheck)
 export(metroContainer)
 export(metroGrid)
 export(metroPage)
