test updateMetroCheck (fail)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,3 +16,6 @@ export(metroTabs)
 export(metroTile)
 export(metroTilesGrid)
 export(metroWindow)
+export(updateMetroCheck)
+importFrom(htmltools,htmlDependency)
+importFrom(utils,packageVersion)
