--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R: c(
 Maintainer: David Granjon <dgranjon@ymail.com>
 Description: Create 'Windows' like shiny apps.
     Customize your web applications.
-Imports: shiny
+Imports: shiny, htmltools, utils
 License: GPL-2
 Encoding: UTF-8
 URL: https://github.com/RinteRface/shinyMetroUi, https://rinterface.github.io/shinyMetroUi/
